# Sandisk-Hackathon

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  __main__.py  desktop.py  launcher.py  pma_metadata.db-journal  pylint_results.txt  pyproject.toml  requirements.txt  sonar-project.properties  test_rag_12596.db-shm  test_rag_12596.db-wal  test_rag_9156.db-shm  test_rag_9156.db-wal
.scannerwork/: report-task.txt
app/: __init__.py  config.py  main.py  main.py_partial_remove_endpoint
app/embeddings/: finetune.py  service.py
app/indexing/: service.py
app/insights/: service.py  unreal_import.py
app/scanner/: __init__.py  ntfs_mft.py  scanner.py
app/scanner/rust_core/: Cargo.toml
app/search/: context_builder.py  llm_client.py  reranker.py  retrieval.py
app/storage/: db.py  schema.sql
app/utils/: metrics.py
demo_data/: OS_project_feedback.txt  code_tips.md  internship_offer.md
docs/: API_SPEC.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  INDEXING_AND_RAG.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx  useApi.ts
frontend/src/components/: AppShell.tsx  FileTypeTreemap.tsx  WebGPUFallback.tsx
frontend/src/interaction/: EnvelopingCamera.ts
frontend/src/pages/: ExplorerPage.tsx  InsightsPage.tsx  LibraryPage.tsx  SearchPage.tsx
frontend/src/physics/: VerletIntegration.ts
frontend/src/renderer/: WebGPURenderer.ts
frontend/src/spatial/: LinearBVH.ts  MortonEncoding.ts
static/: pma.css  pma.js
static/react/: index.html
static/react/assets/: ExplorerPage-B-L9zUru.js  ExplorerPage-Cy0d-aUc.js  ExplorerPage-D8dQq1Uw.js  (+27 more)
templates/: index.html
tests/: _test_clear.py  conftest.py  test_central_coverage.py  test_coverage_boost.py  test_db_manager_extended.py  test_exhaustive_coverage.py  test_indexing_service_extended.py  test_main.py  test_retrieval_and_reranker.py  test_scanner.py  verify_fps.py
(+5 files in other folders)
